# Le-Cep

./: .gitignore  Cargo.toml  README.md
src/: database.rs  functions.rs  main.rs
src/routes/: contact.rs  index.rs  panel.rs  planning.rs
src/routes/api/: func.rs  login.rs  logout.rs  users.rs
static/css/: style.css
static/js/: main.js
templates/: layout.html
templates/components/: navbar.html  planning.html
templates/routes/: contact.html  index.html  login.html  panel.html  planning.html
