[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.15.1"
axum = "0.8.8"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
time = "0.3.45"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-sessions = "0.14.0"


